Fixed authentication with the Nordnet Broker +JavaScripts are run by Rhino-engine +Small fixed and clean ups